--- a/views/coursePage.ejs
+++ b/views/coursePage.ejs
@@ -17,7 +17,7 @@
           </p>
           <p class="card-text"><small class="text-muted"></small></p>
           <p class="card-text">
-            <a href="quiz.html" class="btn btn-light">Quizes</a>
+            <a href="/lms" class="btn btn-light">Quizes</a>
           </p>
         </div>
       </div>
@@ -37,7 +37,7 @@
           </p>
           <p class="card-text"><small class="text-muted"></small></p>
           <p class="card-text">
-            <a href="./lms.html" class="btn btn-light">Online Courses</a>
+            <a href="/lms" class="btn btn-light">Online Courses</a>
           </p>
         </div>
       </div>
@@ -62,7 +62,7 @@
           </p>
           <p class="card-text"><small class="text-muted"></small></p>
           <p class="card-text">
-            <a href="./lms.html" class="btn btn-light">Offline Courses</a>
+            <a href="/lms" class="btn btn-light">Offline Courses</a>
           </p>
         </div>
       </div>
