--- a/views/partials/_navbar_.ejs
+++ b/views/partials/_navbar_.ejs
@@ -36,7 +36,10 @@
             </li>
             <% } else { %>
             <li class="nav-item px-2">
-              <a class="nav-link text-white" href="/form">Sign In</a>
+              <a class="nav-link text-white" href="/login">Sign In</a>
+            </li>
+            <li class="nav-item px-2">
+              <a class="nav-link text-white" href="/register">Register Here</a>
             </li>
             <%} %>
         </ul>
