--- a/views/forms/registration.ejs
+++ b/views/forms/registration.ejs
@@ -21,6 +21,12 @@
           <span class="hidden-xs">Google+</span>
         </a>
       </div>
+      <div class="col-xs-4 col-sm-2">
+        <a href="/git/auth" class="btn btn-lg btn-block omb_btn-google">
+          <i class="fa fa-github visible-xs"></i>
+          <span class="hidden-xs">Github+</span>
+        </a>
+      </div>
     </div>
 
     <div class="row omb_row-sm-offset-3 omb_loginOr">
