--- a/views/partials/_navbar_.ejs
+++ b/views/partials/_navbar_.ejs
@@ -39,7 +39,7 @@
               <a class="nav-link text-white" href="/login">Sign In</a>
             </li>
             <li class="nav-item px-2">
-              <a class="nav-link text-white" href="/register">Register Here</a>
+              <a class="nav-link text-white" href="/register">Register</a>
             </li>
             <%} %>
         </ul>
