--- a/views/forms/registration.ejs
+++ b/views/forms/registration.ejs
@@ -11,7 +11,7 @@
       </div>
       <div class="col-xs-4 col-sm-2">
         <a href="/linkedin/auth" class="btn btn-lg btn-block omb_btn-twitter">
-          <i class="fa fa-twitter visible-xs"></i>
+          <i class="fa fa-linkdin visible-xs"></i>
           <span class="hidden-xs">linkdin</span>
         </a>
       </div>
