--- a/views/forms/signin.ejs
+++ b/views/forms/signin.ejs
@@ -11,7 +11,7 @@
       </div>
       <div class="col-xs-4 col-sm-2">
         <a href="/linkedin/auth" class="btn btn-lg btn-block omb_btn-twitter">
-          <i class="fa fa-twitter visible-xs"></i>
+          <i class="fa fa-linkedin visible-xs"></i>
           <span class="hidden-xs">Linkdin</span>
         </a>
       </div>
@@ -24,7 +24,7 @@
       <div class="col-xs-4 col-sm-2">
         <a href="/git/auth" class="btn btn-lg btn-block omb_btn-google">
           <i class="fa fa-github visible-xs"></i>
-          <span class="hidden-xs">Github+</span>
+          <span class="hidden-xs">Github</span>
         </a>
       </div>
     </div>
